crates/keron-lang/tests/corpus/errors/parse/unknown_type.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found 'F' expected something else, '#', '"List"', '"Map"', '"String"', '"Int"', '"Boolean"', '"Double"', '"Symlink"', '"File"', or '"Directory"'
  --> 1:8
  |
1 | val a: Float = 1.0
  |        ^
